# news-interview-fast-api

./: .gitignore  Dockerfile  README.md  database.db  database.py  docker-compose.yml  main.py  mosday.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 0c31efbc54b1_init.py  fd5e750f7ad5_add_news.py
models/: news_models.py
services/: services.py
