[tool.poetry]
name = "news-interview-fast-api"
version = "0.1.0"
description = ""
authors = ["AdmiralDesu <skyrim.men024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
uvicorn = "^0.17.6"
sqlmodel = "^0.0.6"
alembic = "^1.8.0"
aiosqlite = "^0.17.0"
fastapi-utils = "^0.2.1"
bs4 = "^0.0.1"
requests = "^2.28.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
